# oellm-tasks

./: LICENSE  README.md  pyproject.toml
langab/: README.md
oellm_tasks/: __init__.py
oellm_tasks/tasks/: .gitignore
oellm_tasks/tasks/cus-qa/: README.md
oellm_tasks/tasks/cus-qa/text-CZ/: cus_qa_text_cz_orig.yaml
oellm_tasks/tasks/lang-ab-testing/: README.md
oellm_tasks/tasks/lang-ab-testing/lang-ab/: __private_data_location.yaml.sample  lang-ab.yaml  sample_LangAb.csv
oellm_tasks/tasks/sensemaking-2026/: README.md
oellm_tasks/tasks/sensemaking-2026/rubric_rating/: __private_data_location.yaml.sample  _rubric_rating_numbers.yaml  rubric_rating_cs_demagog.yaml  rubric_rating_da_demagog.yaml  (+16 more)
tasks/: README.md
tasks/cus-qa/: README.md
tasks/sensemaking-2026/rubric_rating/: _rubric_rating.yaml  generate_yaml_files.py  rubric_rating_cs_OECD_public.yaml  rubric_rating_cs_popular_science.yaml  rubric_rating_da_OECD_public.yaml  rubric_rating_de_OECD_public.yaml  rubric_rating_de_popular_science.yaml  rubric_rating_el_popular_science.yaml  rubric_rating_en_OECD_public.yaml  rubric_rating_en_demagog.yaml  rubric_rating_en_popular_science.yaml  rubric_rating_fi_OECD_public.yaml  rubric_rating_fi_demagog.yaml  rubric_rating_fi_popular_science.yaml  rubric_rating_ga_OECD_public.yaml  rubric_rating_ga_demagog.yaml  rubric_rating_hu_demagog.yaml  rubric_rating_hu_popular_science.yaml  rubric_rating_ro_OECD_public.yaml  rubric_rating_ro_demagog.yaml  rubric_rating_sv_demagog.yaml  rubric_rating_sv_popular_science.yaml  rubric_rating_uk_OECD_public.yaml  utils.py
