[project]
name = "oellm-tasks"
version = "0.1.0"
description = "OpenEuroLLM evaluation tasks for the lm-eval harness"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oellm_tasks"
module-root = ""
include = ["oellm_tasks/tasks/**/*"]
